tests/NormalTests/paczka1/fuzzy1/57476598.err
Error in line 7: F1leHT S475 12,2
Error in line 13: F1leHT A619 69,1
Error in line 9: xgLaxUeTUCK S475 63,2
Error in line 32: g3tqH A486 56,6
Error in line 22: JttrYGOL S526 61,2
